<resources>
    <string name="app_name">Insta Pic App</string>
    <string name="action_settings">Settings</string>
    <string name="add_icon">Add Icon</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_description">Enter Description</string>
    <string name="submit">Submit</string>
    <string name="post_title">Post Title</string>
    <string name="post_description">Post Description</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_e_mail">Enter E-mail</string>
    <string name="register">Register</string>
    <string name="logout">LogOut</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="done">Done</string>
    <string name="username">Username</string>
    <string name="delete_image">Delete Image</string>
</resources>
