<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.ibrahem.instapicapp.RegisterActivity">

    <EditText
        android:id="@+id/nameFiled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name" />

    <EditText
        android:id="@+id/emailFiled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_e_mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passFiled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="registerButtonClicked"
        android:text="@string/register" />

</LinearLayout>
